# MyAIAgent

./: .env  Cargo.toml  README.md  null
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs  telemetry.rs
crates/agent-core/src/agent/: config.rs  error.rs  mod.rs  runner.rs
crates/agent-core/src/llm/: client.rs  config.rs  error.rs  mod.rs  types.rs
crates/agent-core/src/memory/: mod.rs  sliding.rs
crates/agent-core/src/rag/: embedder.rs  mod.rs  retriever.rs  store.rs
crates/agent-core/src/tools/: calculator.rs  error.rs  mod.rs  registry.rs  tool.rs
docs/: stage6-vector-store.md  stage7-retriever.md
