[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anstream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
meval = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }